# app/models/Project.scala
@@ -9,23 +9,7 @@ import scala.concurrent.duration._
 /**
   * Created by Malte on 10.01.2016.
   */
-class Project(projectidC: Long, nameC: String) {
-  val projectid = projectidC
-  val name = nameC
-  var flavours :Option[Seq[FlavourStub]] = None
-
-  def getFlavours :Seq[FlavourStub] =
-  {
-    if (flavours.isEmpty )
-      {
-        flavours = Some(Await.result(FlavourRepository.getFlavourStubs(projectid),Duration(1000, MILLISECONDS)))
-//        flavours = Some(ProjectsRepository.getFlavourStubs(projectid).result(Duration(1000, MILLISECONDS)))
-      }
-
-    flavours.get
-  }
-
-}
+case class Project(projectid: Long, name: String, flavours :Seq[FlavourStub])
 
 
 
@@ -34,7 +18,7 @@ object Project {
     def writes(project: Project) = Json.obj(
       "ID" -> project.projectid,
       "name" -> project.name,
-      "flavours" -> project.getFlavours.map( (flavour : FlavourStub) => Json.toJson(flavour)).foldLeft(JsArray()){
+      "flavours" -> project.flavours.map( (flavour : FlavourStub) => Json.toJson(flavour)).foldLeft(JsArray()){
           (array : JsArray, stubJSON : JsValue) =>
             array.append(stubJSON)
         }
